--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "sequelize-cli": "^5.5.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.1.0",
     "sequelize": "^5.21.5",
     "winston": "^3.2.1",
     "yup": "^0.28.1"
