--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "class-methods-use-this":"off",
     "no-param-reassign":"off",
     "camelcase":"off",
+    "no-underscore-dangle": "off",
     "no-unused-vars": ["error", {"argsIgnorePattern": "next"}]
   }
 }
