--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "sequelize-cli": "^5.5.1"
   },
   "dependencies": {
+    "@sentry/node": "5.12.2",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.5",
     "winston": "^3.2.1",
+    "youch": "^2.0.10",
     "yup": "^0.28.1"
   }
 }
