--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@sentry/node": "5.12.2",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -27,6 +28,8 @@
     "mongoose": "^5.9.2",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "pg": "^7.18.2",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5",
     "winston": "^3.2.1",
     "youch": "^2.0.10",
