--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "ecmaVersion": 2018
   },
   "rules": {
+    "no-return-assign":"off",
     "class-methods-use-this":"off",
     "no-param-reassign":"off",
     "camelcase":"off",
