--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@sentry/node": "5.12.2",
+    "async-redis": "^1.1.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.5",
@@ -30,7 +31,9 @@
     "mysql2": "^2.1.0",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
+    "redis": "^3.0.2",
     "sequelize": "^5.21.5",
+    "socket.io": "^2.3.0",
     "winston": "^3.2.1",
     "youch": "^2.0.10",
     "yup": "^0.28.1"
